force-app/main/default/objects/InformationRequestType__c/InformationRequestType__c.object-meta.xml
<CustomObject>
    <description>Used to specify process for different data gathering scenarios</description>
    <label>Information Request Type</label>
    <nameField>
        <label>Information Request Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Information Request Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>