force-app/main/default/objects/InformationRequestType__c/fields/BuilderLevel__c.field-meta.xml
<CustomField>
    <fullName>BuilderLevel__c</fullName>
    <description>Indicates the level of detail required in the suitability builder</description>
    <label>Builder level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not required</fullName>
            </value>
            <value>
                <fullName>Value only</fullName>
            </value>
            <value>
                <fullName>Full analysis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>