force-app/main/default/objects/InformationRequestType__c/fields/ChecklistLevel__c.field-meta.xml
<CustomField>
    <fullName>ChecklistLevel__c</fullName>
    <description>Indicates the level of detail required in the comet checklist</description>
    <label>Checklist level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not required</fullName>
            </value>
            <value>
                <fullName>Shortened</fullName>
            </value>
            <value>
                <fullName>Full</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>