force-app/main/default/objects/InformationRequestType__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>A description of this information request type</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>