force-app/main/default/objects/InformationRequestType__c/fields/HoldUpAdvice__c.field-meta.xml
<CustomField>
    <fullName>HoldUpAdvice__c</fullName>
    <description>Indicates whether any information requests of this type should stop advice progressing while they are in progress</description>
    <label>Hold up advice?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
                <label>Yes</label>
            </value>
            <value>
                <fullName>NO</fullName>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>