force-app/main/default/objects/InformationRequestType__c/fields/InformationSource__c.field-meta.xml
<CustomField>
    <fullName>InformationSource__c</fullName>
    <description>Where we should go for information on this policy</description>
    <label>Information source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Third party provider</fullName>
            </value>
            <value>
                <fullName>Not required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>