force-app/main/default/objects/InformationRequestType__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ChecklistLevel__c</columns>
    <columns>BuilderLevel__c</columns>
    <columns>Description__c</columns>
    <columns>InformationSource__c</columns>
    <columns>Sequence__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>